# xous-kernel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  asm.S  assemble.ps1  assemble.sh  build-rust-sysroot.ps1  build-rust-sysroot.sh  build.rs  link.x  memory.x
.cargo/: config
src/: args.rs  asm.S  debug.rs  exception.rs  irq.rs  lib.rs  main.rs  mem.rs  processtable.rs  start.rs  syscall.rs  syscalls.rs  test.rs  timer.rs  uart.rs
src/arch/: mod.rs  riscv.rs  x86_64.rs
src/arch/riscv/: exception.rs  irq.rs  mem.rs  start.rs  syscall.rs
xous-kernel-riscv-rt/: Cargo.toml  asm.S  link.x
xous-kernel-riscv-rt/macros/: Cargo.toml
xous-kernel-riscv-rt/macros/src/: lib.rs
xous-kernel-riscv-rt/src/: lib.rs
xous-riscv/: Cargo.toml  asm.S  build.rs
xous-riscv-rt/: Cargo.toml  build.rs  link.x
xous-riscv-rt/macros/: Cargo.toml
xous-riscv-rt/macros/src/: lib.rs
xous-riscv-rt/src/: lib.rs
xous-riscv/src/: asm.rs  interrupt.rs  lib.rs
xous-riscv/src/register/: fcsr.rs  macros.rs  marchid.rs  mcause.rs  mhpmeventx.rs  mimpid.rs  mip.rs  misa.rs  mod.rs  mstatus.rs  mtvec.rs  mvendorid.rs  pmpaddrx.rs  satp.rs  scause.rs  sstatus.rs  stvec.rs  utvec.rs  vdci.rs  vmim.rs  vmip.rs  vsim.rs  vsip.rs
xous-rs/: Cargo.toml  assemble.sh  build.rs
xous-rs/src/: asm.S  definitions.rs  lib.rs  syscall.rs
