[package]
name = "xous-kernel"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
description = "Core kernel for Xous, including task switching and memory management"

[dependencies]
xous-riscv = { path = "xous-riscv" }
xous-kernel-riscv-rt = { path = "xous-kernel-riscv-rt" }

[profile.release]
codegen-units = 1 # 1 better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true
#opt-level=0
