[package]
name = "xous-kernel"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
description = "Core kernel for Xous, including task switching and memory management"

[dependencies]
bitflags = "1.2.1"
r0 = "0.2.2"
vexriscv = "0.0.2"
xous = { path = "xous-rs" }

[features]
debug-print = []

[profile.release]
codegen-units = 1 # 1 better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true
#opt-level=0
