[package]
name = "xous-kernel-riscv-rt"
version = "0.6.1"
repository = "https://github.com/xous/xous-riscv-rt"
authors = ["Sean Cross <sean@xobs.io>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "no-std", "xous"]
description = "Minimal runtime / startup for RISC-V CPU's"
keywords = ["riscv", "runtime", "startup"]
license = "ISC"

[dependencies]
r0 = "0.2.2"
xous-riscv = { path = "../xous-riscv" }
xous-kernel-riscv-rt-macros = { path = "macros" }

[dev-dependencies]
xous-riscv = { path = "../xous-riscv" }
panic-halt = "0.2.0"
